--- a/app/src/main/res/layout/activity_fragment.xml
+++ b/app/src/main/res/layout/activity_fragment.xml
@@ -7,7 +7,7 @@
     android:gravity="center"
     android:orientation="vertical"
     android:padding="8dp"
-    tools:context=".controller.activity.SingleFragmentActivity">
+    tools:context=".view.activity.SingleFragmentActivity">
 
     <FrameLayout
         android:id="@+id/fragment_container"
