--- a/app/src/main/res/layout/fragment_photo_gallery.xml
+++ b/app/src/main/res/layout/fragment_photo_gallery.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="8dp"
-    tools:context=".controller.fragment.PhotoGalleryFragment">
+    tools:context=".view.fragment.PhotoGalleryFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
