1.  refactor!: using DataBinding     BREAKING CHANGES:     activity_fragment.xml, fragment_photo_gallery.xml and list_item_photo_gallery.xml converted to data binding layouts.
2.  feature: adding search to project
    BREAKING CHANGES:
    adding search in menu.
    search in flickr using retrofit.

3.  feature: using shared preferences
    BREAKING CHANGES:
    adding key-value pair to store the latest search query in shared preferences.
    at the onCreate check if there is search query in shared preferences, it must search the api, or show the popular if not exists.

--- a/app/src/main/res/layout/fragment_photo_gallery.xml
+++ b/app/src/main/res/layout/fragment_photo_gallery.xml
@@ -1,26 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="8dp"
-    tools:context=".view.fragment.PhotoGalleryFragment">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <androidx.recyclerview.widget.RecyclerView
+    <data>
+
+    </data>
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/recycler_view_photo_gallery"
-        android:layout_above="@+id/progress_bar"/>
+        android:padding="8dp"
+        tools:context=".view.fragment.PhotoGalleryFragment">
 
-    <ProgressBar
-        android:id="@+id/progress_bar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:gravity="center_horizontal"
-        android:padding="10dp"
-        android:visibility="gone"
-        />
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/recycler_view_photo_gallery"
+            android:layout_above="@+id/progress_bar" />
 
-</RelativeLayout>
+        <ProgressBar
+            android:id="@+id/progress_bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:gravity="center_horizontal"
+            android:padding="10dp"
+            android:visibility="gone" />
+
+    </RelativeLayout>
+</layout>
