--- a/app/src/main/res/layout/list_item_photo_gallery.xml
+++ b/app/src/main/res/layout/list_item_photo_gallery.xml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="120dp"
-    android:id="@+id/item_image_view"
-    android:scaleType="centerCrop"
-    android:layout_gravity="center">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-</ImageView>
+    <data>
+
+    </data>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+        android:id="@+id/item_image_view"
+        android:scaleType="centerCrop"
+        android:layout_gravity="center">
+
+    </ImageView>
+</layout>
