1.Using IntentService name PollService to poll from flickr server and show notification if the new picture has been uploaded to server. 2.Adding toggle polling menu item to start/stop the polling. 3.Create notification channel in Application class. Show notification when new picture available on flickr. 4.Change mvvm packing little bit.

--- a/app/src/main/res/menu/fragment_photo_gallery.xml
+++ b/app/src/main/res/menu/fragment_photo_gallery.xml
@@ -14,4 +14,8 @@
         android:id="@+id/menu_item_clear"
         android:title="@string/menu_item_clear"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/menu_item_poll_toggling"
+        android:title="@string/start_polling"
+        app:showAsAction="ifRoom" />
 </menu>
