1.Using job scheduler for android lollipop and greater. Adding PollJobService.
2.Adding bind service permission to job service in manifest.

3.Using work manager instead of alarm manager and job scheduler.

4.Using work manager in PhotoGalleryViewModel instead of alarm manager and job scheduler.

5.Using intent to show the page of the photo in browser.
Adding two variables to layout list_item_photo_gallery.xml to handle data binding correctly.

--- a/app/src/main/res/layout/list_item_photo_gallery.xml
+++ b/app/src/main/res/layout/list_item_photo_gallery.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
-
     <data>
+        <variable
+            name="viewModel"
+            type="org.maktab.photogallery.viewmodel.PhotoGalleryViewModel" />
 
+        <variable
+            name="position"
+            type="Integer" />
     </data>
 
     <ImageView
@@ -10,7 +15,8 @@
         android:layout_height="120dp"
         android:id="@+id/item_image_view"
         android:scaleType="centerCrop"
-        android:layout_gravity="center">
+        android:layout_gravity="center"
+        android:onClick="@{() -> viewModel.onImageClicked(position)}">
 
     </ImageView>
 </layout>
