Adding the Locatr page two show the picture of the current location.

--- a/app/src/main/res/menu/fragment_photo_gallery.xml
+++ b/app/src/main/res/menu/fragment_photo_gallery.xml
@@ -11,11 +11,15 @@
         app:actionViewClass="android.widget.SearchView"
         app:showAsAction="ifRoom" />
     <item
-        android:id="@+id/menu_item_clear"
-        android:title="@string/menu_item_clear"
-        app:showAsAction="never" />
-    <item
         android:id="@+id/menu_item_poll_toggling"
         android:title="@string/start_polling"
         app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/menu_item_locatr"
+        android:title="@string/menu_item_locatr"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/menu_item_clear"
+        android:title="@string/menu_item_clear"
+        app:showAsAction="never" />
 </menu>
